# Boat-RV-Guardian

./: ARCHITECTURE.md  CLAUDE.md  LICENSE  LOCAL_API_SETUP.md  PHYSICAL_SETUP.md  PUSH_NOTIFICATIONS_SETUP.md  README.md  build-log.txt  capacitor.config.ts  index.html  keystore.base64.txt  manifest.json  manifest.webmanifest  package-lock.json  package.json  req.txt  sw.js  sync-log.txt  test_reqwest.rs  vite.config.ts
.agents/: AGENTS.md
app/: index.html  manifest.webmanifest  sw.js
assets/: app-B0ckPHCl.js  app-B4b6-aKi.js  app-BUCRKpYb.js  app-BavRawJR.js  app-BhKwpXsT.css  app-BjMc5eKE.js  app-BoYWZUR5.js  app-BvTwUUZ5.js  app-BvmspOca.js  app-CI0R2NkV.js  app-CRURnhGc.js  app-CUEBb0zE.js  app-CV-DNJCX.css  app-CZqt-mbZ.js  app-C_9OWMXM.js  app-CckVpRQ_.js  app-CiFcLe-I.js  app-CkDIpX5l.js  app-CxuTQ85F.js  app-D4bdBiwe.js  app-DY9JwKvJ.js  app-D_N2i5Hk.js  app-Dc0xXotV.js  app-DpDAykXx.js  app-DtS9Juxq.js  app-DzQMZ92V.js  app-FaaVuPBg.js  app-TxdRevkn.js  app-c9EqdGTM.js  app-xSxlgb6i.js  dist-js-CWCwEHbs.js  index--xgD8a1M.js  index-3YJ5po_E.js  index-7jZZxJ7L.js  index-8K2s2TCu.js  index-BAzhxbGm.js  index-BB-rHb0P.js  index-BQ8SPX81.js  index-BU3He_3p.js  index-BUEBr_ia.js  (+28 more)
cloudflare/: package-lock.json  package.json  wrangler.toml
dashboard/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: lib.rs
public/: manifest.json  sw.js
src/: App.tsx  main.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+74 files in other folders)
