[package]
name = "app"
version = "1.0.38"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.3.3"
mdns-sd = "0.12"
local-ip-address = "0.6"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
tauri-plugin-oauth = "2.0.0"

